--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ a {
 }
 
 body {
-    background: url(https://mentalized.net/activity-indicators/indicators/circling-ball-black-back.gif), black;
+    background-color: black;
     font-family: monospace;
 }
 
@@ -94,8 +94,8 @@ h6 {
 .image-window {
     float:right;
     border: 1px solid #07FEF6;
+    margin: 19px;
     margin-right: 15px;
-    margin-top: 19px;
 }
 
 .image-window h3 {
@@ -106,6 +106,10 @@ hr {
     border: .5px solid #07FEF6;
     position:relative;
     top: -2px;
+}
+
+.cont-2 {
+    width: 760px;
 }
 
 .cont3 {
